# prediction-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  basic_usage.py  drift_simulation.py  fastapi_integration.py
prediction_guard/: __init__.py  cli.py  config.py  guard.py  incident.py  types.py
prediction_guard/action/: __init__.py  cooldown.py  executor.py
prediction_guard/analysis/: __init__.py  analyzer.py  baseline_manager.py  drift_detector.py
prediction_guard/decision/: __init__.py  engine.py
prediction_guard/logging/: __init__.py  log_reader.py  telemetry_logger.py
prediction_guard/middleware/: __init__.py  helpers.py  interceptor.py
tests/: __init__.py  test_decision_engine.py  test_drift_detector.py  test_helpers.py
