[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-guard"
version = "0.1.0"
description = "Lightweight middleware for ML model failure detection and rollback"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Prediction Guard Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "machine-learning",
    "mlops",
    "drift-detection",
    "model-monitoring",
    "rollback",
    "middleware",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
prediction-guard = "prediction_guard.cli:main"

[project.urls]
Homepage = "https://github.com/swamy18/prediction-guard"
Documentation = "https://swamy18.github.io/prediction-guard"
Repository = "https://github.com/swamy18/prediction-guard"
Issues = "https://github.com/swamy18/prediction-guard/issues"
Changelog = "https://github.com/swamy18/prediction-guard/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["prediction_guard*"]

[tool.setuptools.package-data]
prediction_guard = ["py.typed"]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "numpy.*",
]
ignore_missing_imports = true

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default arguments
    "B905",   # zip without explicit strict
    "SIM108", # use ternary operator
    "SIM115", # use context manager for open - not always applicable
    "PTH123", # open() vs Path.open() - both acceptable
    "PTH118", # os.path.join vs Path - both acceptable
    "SIM102", # nested if - readability preference
    "RUF002", # ambiguous chars in docstrings - ok for math symbols
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]
"examples/*" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["prediction_guard"]
force-single-line = false
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
)/
'''

# =============================================================================
# ISORT CONFIGURATION
# =============================================================================

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["prediction_guard"]
skip = [".venv", "venv", "build", "dist"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================

[tool.coverage.run]
branch = true
source = ["prediction_guard"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
precision = 2
